<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/number_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:textColor="#000"
        android:textSize="12sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/number_tv"/>
    <TextView
        android:id="@+id/idc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:textColor="#000"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/idc_tv"/>

    <TextView
        android:id="@+id/naltype_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:textColor="#000"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/naltype_tv"/>

    <TextView
        android:id="@+id/nallen_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:textColor="#000"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/nallen_tv"/>

</LinearLayout>